nav items updated, create team for both sports working, draft button for create teams not disabled class

--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -1,10 +1,10 @@
 section.nl-section.nl-players.nl-create-team.soccer
-    div.container.container-wider
+    div.container-fluid
         div.row
             div.col-md-12
                 h1 CREATE TEAM
         div.row.sports-filtering
-            div.col-md-12.col-lg-8
+            div.col-xs-12
                 div.nl-players-filter-title Filter by league:
                 div.nl-players-filter
                     div.row.align-items-center
@@ -81,7 +81,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                             p teams france
 
         div.row
-            div.col-md-12.col-lg-8.nl-team-m600
+            div.col-md-12.col-lg-7.col-xl-7
                 div.nl-players-table.nl-create-team-table
                     div.nl-players-table-data-field
                         div.nl-data--avatar.hidden-sm-down
@@ -749,7 +749,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                                         tbody
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
@@ -761,7 +761,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
@@ -773,7 +773,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
@@ -785,7 +785,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
@@ -797,7 +797,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
@@ -809,7 +809,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
@@ -821,7 +821,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
@@ -833,7 +833,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
@@ -845,7 +845,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
@@ -857,7 +857,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
@@ -869,7 +869,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                                                 td <a href="#"><span class="info">i</span></a>
                                             tr
                                                 td
-                                                    button.btn.btn-primary.btn-sm.disabled Draft
+                                                    button.btn.btn-primary.btn-sm Draft
                                                 td.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo
                                                 td $21000
                                                 td 20
@@ -888,7 +888,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                         div.tab-pane(id="m" role="tabpanel") TAB4
                         div.tab-pane(id="a" role="tabpanel") TAB5
 
-            div.col-lg-4.nl-team-600
+            div.col-md-12.col-lg-5.col-xl-5
                 div.nl-team-info
                     div.nl-team-name your team
                     div.nl-team-data
@@ -912,7 +912,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                     button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
                     button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
                 div.nl-team-field
-                    div.player-main-block
+                    div.player-main-block.soccer
                         div.nl-player-block.nl-G-position(data-position="G")
                             img(src="assets/img/img-goalkeeper.png" alt="goalkeeper")
                             div.nl-player-block--data
