--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -73,14 +73,14 @@ header.nl-header-log
                                     a.nav-link.dropdown-toggle(href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") MY ACCOUNT
                                     div.dropdown-menu(aria-labelledby="dropdownMenuLink2")
                                         a.dropdown-item(href="edit_profile.html") Profile
-                                        a.dropdown-item(href="change_password.html") Change Password
+                                        a.dropdown-item(href="change_password.html") edit Password
                                         a.dropdown-item(href="#") Friends 
                                         a.dropdown-item(href="my_balances.html") My Balance
                                     
                                 li.nav-item.dropdown
                                     a.nav-link.dropdown-toggle(href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") <img alt="" src="assets/img/flag/USA.png">
                                     div.dropdown-menu(aria-labelledby="dropdownMenuLink2")
-                                        a.dropdown-item(href="#") France
+                                        a.dropdown-item(href="#") French
                                         a.dropdown-item(href="#") <img alt="" src="assets/img/flag/Spain.png">
                                         a.dropdown-item(href="#") <img alt="" src="assets/img/flag/Germany.png">
                                         a.dropdown-item(href="#") <img alt="" src="assets/img/flag/USA.png">
