--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -2888,6 +2888,8 @@ tbody.collapse.show {
   font-weight: 400;
   font-family: Montserrat;
   width: 100%; }
+  .navbar-nav .dropdown-item {
+    padding: 9px 0.5rem; }
   .navbar-nav__sports-img {
     float: right; }
     .navbar-nav__sports-img:after {
@@ -2929,7 +2931,7 @@ tbody.collapse.show {
     @media only screen and (min-width: 992px) and (max-width: 1200px) {
       .navbar-nav li.nav-item {
         max-width: inherit;
-        width: 10%; } }
+        width: 13%; } }
     @media (max-width: 991px) {
       .navbar-nav li.nav-item {
         width: 100%;
@@ -2943,7 +2945,9 @@ tbody.collapse.show {
     .navbar-nav li.nav-item:nth-child(1) {
       border-left: none;
       width: 8%;
-      max-width: inherit; }
+      max-width: inherit;
+      background: -webkit-gradient(linear, left bottom, left top, from(#e37506), to(#e89708));
+      background: linear-gradient(to top, #e37506, #e89708); }
       .navbar-nav li.nav-item:nth-child(1) .nav-link {
         padding-left: 10vw; }
         .navbar-nav li.nav-item:nth-child(1) .nav-link img {
@@ -2959,7 +2963,7 @@ tbody.collapse.show {
             display: inline-block; } }
       @media only screen and (min-width: 992px) and (max-width: 1200px) {
         .navbar-nav li.nav-item:nth-child(1) {
-          width: 25%; } }
+          width: 8%; } }
       @media (max-width: 991px) {
         .navbar-nav li.nav-item:nth-child(1) {
           width: 100%; }
@@ -2992,13 +2996,13 @@ tbody.collapse.show {
               margin-right: 1.25rem; } }
     @media only screen and (min-width: 992px) and (max-width: 1200px) {
       .navbar-nav li.nav-item:nth-child(7) {
-        width: 20%; } }
+        width: 15%; } }
     @media (max-width: 991px) {
       .navbar-nav li.nav-item:nth-child(7) {
         width: 100%; } }
     .navbar-nav li.nav-item:last-child {
       border-right: none;
-      width: 5%; }
+      width: 7%; }
       .navbar-nav li.nav-item:last-child img {
         max-width: 2.375rem; }
       @media (max-width: 991px) {
@@ -11018,8 +11022,7 @@ p {
 
 @media (min-width: 1441px) and (max-width: 2000px) {
   .nl-create-team-table {
-    position: absolute;
-    right: 1.5rem; } }
+    position: absolute; } }
 
 .nl-create-team-table td, .nl-create-team-table th {
   padding: 0.25rem 0.25rem;
@@ -11212,8 +11215,12 @@ p {
   min-width: 100%;
   background-size: 100% 100%; }
   @media only screen and (min-width: 992px) and (max-width: 1200px) {
-    .nl-create-team .nl-team-field .player-main-block {
+    .nl-create-team .nl-team-field .football.player-main-block {
       min-height: 373px; }
+    .nl-create-team .nl-team-field .soccer.player-main-block {
+      min-height: 418px; }
+      .nl-create-team .nl-team-field .soccer.player-main-block img {
+        max-width: 50px; }
     .nl-create-team .nl-team-field .football .nl-RRB-position {
       bottom: 41%;
       right: 13.5%; }
@@ -11222,11 +11229,10 @@ p {
       left: 18.5%; }
     .nl-create-team .nl-team-field .football .nl-QB-position {
       top: 20%; } }
-  .nl-create-team .nl-team-field.soccer .nl-player-block img {
-    max-width: 69px; }
-    @media only screen and (min-width: 992px) and (max-width: 1200px) {
-      .nl-create-team .nl-team-field.soccer .nl-player-block img {
-        max-width: 51px; } }
+  @media (min-width: 1200px) and (max-width: 1425px) {
+    .nl-create-team .nl-team-field .soccer {
+      min-height: 507px;
+      max-height: 507px; } }
   .nl-create-team .nl-team-field.football {
     background: url(../img/football/nl-football-field.png) no-repeat 0 0;
     background-size: contain;
