--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -1,5 +1,5 @@
 section.nl-section.nl-my-teams
-    div.container.container-wider
+    div.container-fluid
         div.row
             div.col-md-12
                 h1 My teams
@@ -8,12 +8,12 @@ section.nl-section.nl-my-teams
                 a(href="create_team_football.html") 
                     div.btn.btn-primary.btn-lg.btn-create-team Create team
 
-            div.col-6.col-sm-6.col-md-6.col-lg-4.nl-tar
+            div.col-6.col-sm-6.col-md-6.col-lg-4.helmet
                 a(href="#") 
                     div.btn.btn-primary.btn-lg.btn-create-team Create Helmet
 
         div.row.nl-m-b-25
-            div.col-12.col-md-6.col-lg-6.col-xl-3
+            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -108,7 +108,7 @@ section.nl-section.nl-my-teams
                                             | FP TOTAL:
                                             span.result 199.7
 
-            div.col-12.col-md-6.col-lg-6.col-xl-3
+            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -202,7 +202,7 @@ section.nl-section.nl-my-teams
                                         p
                                             | FP TOTAL:
                                             span.result 199.7
-            div.col-12.col-md-6.col-lg-6.col-xl-3
+            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3
                 .nl-card-wrapper
                     .row
                         .col-12
@@ -296,7 +296,7 @@ section.nl-section.nl-my-teams
                                         p
                                             | FP TOTAL:
                                             span.result 199.7
-            div.col-12.col-md-6.col-lg-6.col-xl-3
+            div.col-12.col-sm-6.col-md-4.col-lg-4.col-xl-3
                 .nl-card-wrapper
                     .row
                         .col-12
