--- a/markup/_scss/sections/_nl-my-teams.scss
+++ b/markup/_scss/sections/_nl-my-teams.scss
@@ -1,5 +1,9 @@
 .nl-my-teams{
 
+  .helmet {
+    text-align: right;
+  }
+
   .soccer.nl-section {
     padding: calculateRem(40px) 3.25rem;
   }
@@ -99,6 +103,10 @@
     align-items: center;
     img{
       width: auto;
+
+      @media (max-width: 1200px) {
+        height: 50px;
+      }
     }
 
     &-data-field {
@@ -127,10 +135,26 @@
       font-weight: 400;
       margin-bottom: 0;
       color: white;
-      margin-left: 3rem;
+      margin-left: 2rem;
+      max-width: 52%;
+      
+      @media (max-width: 1200px) {
+        font-size: 20px;
+      }
 
       @include respond-to(allwider){
         margin-left: 2rem;
+        font-size: 17px;
+
+      }
+
+      @include respond-to(handhelds){
+        font-size: 15px;
+        margin-left: 3rem;
+      }
+
+      @include respond-to(tablets){
+        font-size: 17px;
       }
     }
 
