--- a/markup/_scss/sections/_nl-contests.scss
+++ b/markup/_scss/sections/_nl-contests.scss
@@ -53,7 +53,7 @@
   td:not(:first-child),
   th:not(:first-child) {
     text-align: center !important;
-    padding: 0.75rem 0.5rem;
+    padding: 0.5rem 0.5rem;
   }
 
   .nav-tabs {
@@ -104,6 +104,10 @@
     background: #1d2d4e;
     padding-top: 1.3rem;
     padding-bottom: 1.2rem;
+
+    @include respond-to(allmobile) {
+      font-size: 0.85rem;
+    }
   }
 }
 
@@ -177,6 +181,7 @@
   .table-info3, .table-info4{
     th, td{
       text-align: center;
+      padding: 0.25rem;
       &:nth-child(1){
         width: 17%;
       }
