--- a/markup/_layouts/_partials/footer-log.jade
+++ b/markup/_layouts/_partials/footer-log.jade
@@ -17,8 +17,8 @@ footer.nl-footer
                 p <br />Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy<br />
             div.col-lg-4.nl-tar
                 div.input-group-btn
-                    a.btn.btn-footer(htef="#") Forum
-                    a.btn.btn-footer(htef="#") Contact Us
+                    a.btn.btn-footer(href="#") Helpdesk
+                    a.btn.btn-footer(href="contact.html") Contact Us
                 div.input-group-btn
-                    a.btn.btn-footer(htef="#") Faq
-                    a.btn.btn-footer(htef="#") Terms & Conditions
+                    a.btn.btn-footer(href="faq.html") Faq
+                    a.btn.btn-footer(href="terms_conditions.html") Terms & Conditions
