--- a/markup/_layouts/about.jade
+++ b/markup/_layouts/about.jade
@@ -19,7 +19,7 @@ html(lang="en")
 
         //include _partials/login-modal.jade
         //include _partials/registration-modal.jade
-        include _partials/footer.jade
+        include _partials/footer-log.jade
         include _partials/scripts.jade
 
 
