--- a/markup/_layouts/change_password.jade
+++ b/markup/_layouts/change_password.jade
@@ -12,14 +12,12 @@ html(lang="en")
         include _partials/styles.jade
 
     body
-
-
         //include _partials/preloader.jade
         include _partials/header-log.jade
         main
             include _content/change-password-content
 
-        include _partials/footer.jade
+        include _partials/footer-log.jade
         include _partials/scripts.jade
 
 
