--- a/markup/_layouts/contact.jade
+++ b/markup/_layouts/contact.jade
@@ -16,5 +16,5 @@ html(lang="en")
 		main
 			include _content/contact
 
-		include _partials/footer.jade
+		include _partials/footer-log.jade
 		include _partials/scripts.jade
