--- a/markup/_layouts/edit_profile.jade
+++ b/markup/_layouts/edit_profile.jade
@@ -1,29 +1,28 @@
 doctype html
 html(lang="en")
-    head
-        meta(charset='utf-8')
-        meta(http-equiv='X-UA-Compatible', content='IE=edge')
+	head
+		meta(charset='utf-8')
+		meta(http-equiv='X-UA-Compatible', content='IE=edge')
 
-        title= title
+		title= title
 
-        meta(name='description', content='')
-        meta(name='viewport', content='width=device-width, initial-scale=1')
+		meta(name='description', content='')
+		meta(name='viewport', content='width=device-width, initial-scale=1')
 
-        include _partials/styles.jade
+		include _partials/styles.jade
 
-    body
-
-
-        //include _partials/preloader.jade
-        include _partials/header-log.jade
-        main
+	body
 
 
-            include _content/edit-profile-content
+		//include _partials/preloader.jade
+		include _partials/header-log.jade
+		main
 
 
-        include _partials/footer.jade
-        include _partials/scripts.jade
+			include _content/edit-profile-content
+
+		include _partials/footer-log.jade
+		include _partials/scripts.jade
 
 
 
