--- a/markup/_scss/sections/_my_balances.scss
+++ b/markup/_scss/sections/_my_balances.scss
@@ -1,6 +1,8 @@
 .nl-my-balances {
 
-  background: url(../img/nl-players-bg.jpg) top center no-repeat fixed;
+  padding: 2.5rem 0;
+
+  background: url(../img/stadion_full.jpg) 0 0 no-repeat fixed;
   background-size: cover;
 
   .nl-my-balances-wrapper {
@@ -13,16 +15,17 @@
     text-align: center;
     font-size: calculateRem(34px);
     color: #061540;
-    margin-top: calculateRem(20px);
+    margin-top: 1.25rem;
     margin-bottom: calculateRem(17px);
   }
 
   .quote-wrapper {
-    margin-bottom: calculateRem(30px);
+    margin-bottom: calculateRem(10px);
     border-radius: 10px;
-    padding: calculateRem(20px);
+    padding: 0.925rem 0;
     background-color: #142d57;
     p {
+      text-align: center;
       margin: 0;
       font-size: calculateRem(24px);
       color: #fff;
@@ -33,6 +36,10 @@
     }
   }
 
+}
+
+.balance-status {
+  margin-top: 4rem;
 }
 
 .balance-table {
@@ -47,7 +54,7 @@
   border-radius: calculateRem(10px);
   thead {
     th {
-      padding: calculateRem(20px) 0;
+      padding: 0.75rem 0;
       background-color: #142d57;
       color: #ff9f2f;
       font-size: calculateRem(20px);
@@ -68,7 +75,7 @@
       font-size: calculateRem(15px);
     }
     td {
-      padding: calculateRem(30px) 0;
+      padding: 0.875rem 0;
       &:first-child {
         padding: 0 calculateRem(30px);
       }
@@ -85,19 +92,17 @@
 
 
 .nl-balances-btn-wrapper{
-  padding: 0 calculateRem(84px);
-  display: flex;
-  justify-content: space-around;
+  text-align: center;
+ 
   
-  .dark{
-    border-color: #061540;
-    background-color: #061540;
+  .btn {
+
+    font-weight: 600;
+    margin: 0 10px;
   }
 
-  @include respond-to(allsmall){
-   flex-direction: column;
-    button{
-      margin-bottom: calculateRem(15px);
-    }
+  .nlc-blue {
+    background: #142d57;
   }
+  
 }
