--- a/markup/_layouts/_content/faq.jade
+++ b/markup/_layouts/_content/faq.jade
@@ -1,7 +1,7 @@
 section.nl-section.nl-faq
     div.container
         div.row
-            div.nl-p-b-80.nl-p-t-80
+            div.col-12
                 h2 FAQ
                 div(id="accordion" role="tablist" aria-multiselectable="true")
                     div.card
