--- a/markup/_layouts/_content/my-balances.jade
+++ b/markup/_layouts/_content/my-balances.jade
@@ -1,13 +1,12 @@
 section.nl-section.nl-my-balances
     div.container.nl-my-balances-wrapper
         div.row
-            .col-12.col-sm-12.col-md-12.col-lg-4
+            .col-12.col-sm-6.col-md-6.col-lg-4
                 .quote-wrapper
                     p
                         | NLC2 - BTC:
                         span.value 0.000043
-            .col-lg-4
-            .col-12.col-sm-12.col-md-12.col-lg-4
+            .col-12.col-sm-6.col-md-6.col-lg-4.offset-lg-4
                 .quote-wrapper
                     p
                         | NLC2 - USD :
@@ -19,7 +18,7 @@ section.nl-section.nl-my-balances
                 h2 MY BALANCE
 
         div.row
-            .col-lg-2
+            .col-lg-2.col-sm-1.col-md-1
             .col-12.col-sm-10.col-md-10.col-lg-8
                 table.table.balance-table
                     thead
@@ -37,7 +36,7 @@ section.nl-section.nl-my-balances
                             td 1,26,277.5
                             td 0.2699325
                             td 1,009.96
-            .col-lg-2                
+            .col-lg-2.col-sm-1.col-md-1                
         
         div.row.nl-balances-btn-wrapper
             .col-12 
@@ -49,7 +48,7 @@ section.nl-section.nl-my-balances
                 h2 BALANCE STATUS
         
         div.row
-            .col-lg-2
+            .col-lg-2.col-sm-1.col-md-1
             .col-12.col-sm-10.col-md-10.col-lg-8
                 table.table.balance-table
                     thead
@@ -67,7 +66,7 @@ section.nl-section.nl-my-balances
                             td 1,26,277.5
                             td 1200
                             td 500000
-            .col-lg-2    
+            .col-lg-2.col-sm-1.col-md-1    
         div.row.nl-balances-btn-wrapper
             .col-12
                 button.btn.btn-primary STATEMENT
