--- a/markup/_scss/sections/_faq.scss
+++ b/markup/_scss/sections/_faq.scss
@@ -1,6 +1,6 @@
 .nl-faq {
-  padding-top: 0;
-  padding-bottom: 0;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   padding-right: 0;
   background: url(../img/nl-players-bg.jpg) top center no-repeat fixed;
   background-size: cover;
@@ -28,7 +28,7 @@
           width: calculateRem(46px);
           height: calculateRem(46px);
           color: #fff;
-          background: #0d3663;
+          background: #e58707;
           border-radius: calculateRem(23px);
           text-align: center;
           line-height: calculateRem(42px);
