--- a/markup/_layouts/faq.jade
+++ b/markup/_layouts/faq.jade
@@ -18,7 +18,7 @@ html(lang="en")
 
         //include _partials/login-modal.jade
         //include _partials/registration-modal.jade
-        include _partials/footer.jade
+        include _partials/footer-log.jade
         include _partials/scripts.jade
 
 
