--- a/markup/_layouts/_content/faq.jade
+++ b/markup/_layouts/_content/faq.jade
@@ -1,5 +1,5 @@
 section.nl-section.nl-faq
-    div.container
+    div.container-fluid
         div.row
             div.col-12
                 h2 FAQ
