--- a/markup/_scss/sections/_faq.scss
+++ b/markup/_scss/sections/_faq.scss
@@ -2,7 +2,7 @@
   padding-top: 3rem;
   padding-bottom: 3rem;
   padding-right: 0;
-  background: url(../img/stadion_full.jpg) 0 0 no-repeat fixed;
+  background: url(../img/stadion_detail.jpg) 0 0 no-repeat fixed;
   background-size: cover;
   color: #061540;
 
